# Chess-Winner-Prediction

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt
chesswinnerprediction/: __init__.py  config.py  constants.py
chesswinnerprediction/baseline/: constants.py  utils.py
chesswinnerprediction/data/: download_as_csv.py  download_pgn_zst.py  pgn_zst_to_csv.py
chesswinnerprediction/dataloader/: download_pgn_zst.py  pgn_zst_to_csv.py
chesswinnerprediction/models/: naive_model.py
chesswinnerprediction/preprocessing/scripts/: constants.py  download_as_csv.py  download_pgn_zst.py  pgn_zst_to_csv.py
chesswinnerprediction/processing/: process_and_concat_raw_data.py  stack_original_data.py  test.ipynb  utils.py
chesswinnerprediction/visualization/: visualization.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: baseline.ipynb  no_code_model.py  test.ipynb
notebooks/: baseline.ipynb  draft.ipynb  elo_vs_result.ipynb  game_duration_analyze.ipynb  preprocessed_data_explore.ipynb  test.ipynb  tree_draft.ipynb
notebooks/baseline_models/: baseline.ipynb  decision_tree.ipynb  double_stage_log_reg.ipynb  ensembles.ipynb  knn.ipynb  knn_draft.ipynb  logistic_regression_implementation.ipynb  tree_draft.ipynb  tune_draft.ipynb
scripts/: constants.py  download_as_csv.py  process_data_csv.py  split_data.py
